<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tasty</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_filter">filter</string>
    <string name="action_list">listview</string>
    <string name="action_search">검색</string>
    <string name="open_drawer"></string>
    <string name="close_drawer"></string>
    <string name="none"></string>

    <!-- Filter Dialog -->
    <string name="filter_dialog_title">검색조건</string>
    <string name="filter_dialog_text1">한식</string>
    <string name="filter_dialog_text2">중식</string>
    <string name="filter_dialog_text3">일식</string>
    <string name="filter_dialog_text4">양식</string>
    <string name="filter_dialog_text5">분식</string>
    <string name="filter_dialog_text6">기타</string>
    <string name="filter_dialog_apply">적용</string>

    <!-- UserInfo Activity -->
    <string name="user_info_title">회원정보 입력</string>
    <string name="user_info_name">이름</string>
    <string name="user_info_sex">성별</string>
    <string name="user_info_male">남자</string>
    <string name="user_info_female">여자</string>
    <string name="user_info_button">확인</string>
    <string name="user_info_age">나이</string>

    <!-- MyPage Activity -->
    <string name="mypage_title">MyPage</string>
    <string name="mypage_name">이름</string>
    <string name="mypage_sex">성별</string>
    <string name="mypage_age">나이</string>
    <string name="mypage_male">남자</string>
    <string name="mypage_female">여자</string>
    <string name="mypage_button">수정</string>
    <string name="mypage_favorite">즐겨찾기 목록</string>
    <string name="kor_fragment">한식</string>
    <string name="chinese_fragment">중식</string>
    <string name="japan_fragment">일식</string>
    <string name="eng_fragment">양식</string>
    <string name="etc_fragment">기타</string>

    <string-array name="age_array">
        <item>10대</item>
        <item>20대</item>
        <item>30대</item>
        <item>40대</item>
        <item>50대 이상</item>
    </string-array>

    <string name="title_activity_review_more">ReviewMoreActivity</string>
    <string name="action_settings">Settings</string>

</resources>
